add pagination, sort

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,8 @@
             <a class="nav-item nav-link" routerLink="employee-list">Employee list</a>
             <a class="nav-item nav-link" routerLink="department-list">Department list</a>
             <a class="nav-item nav-link" routerLink="position-list">Position list</a>
-            <a class="nav-item nav-link" routerLink="department-employee-list">Employee info(dep_emp)</a>
+            <a class="nav-item nav-link" routerLink="department-employee-list">Employee info(department)</a>
+            <a class="nav-item nav-link" routerLink="position-employee-list">Employee info(position)</a>
             <a class="nav-item nav-link" routerLink="hiring-info-list">Hiring info</a>
         </div>
     </div>
