--- a/src/app/employee-list/employee-list.component.html
+++ b/src/app/employee-list/employee-list.component.html
@@ -5,15 +5,41 @@
 <table class="table table-striped">
   <thead>
     <tr>
-      <th scope="col">Id</th>
-      <th scope="col">First name</th>
-      <th scope="col">Last name</th>
-      <!-- <th scope="col">Adress</th> -->
-      <th scope="col">Skype</th>
-      <th scope="col">Email</th>
-      <th scope="col">Phone number</th>
-      <th scope="col">Active</th>
-      <!-- <th scope="col">Description</th> -->
+      <th scope="col" class="sortable" sortable="id" (sort)="onSort($event)">Id
+        <span class="caret-blank"
+          [ngClass]="{'caret-down':order=='desc' && column=='id', 'caret-up':order=='asc' && column=='id'}">
+    </span>
+      </th>
+      <th scope="col" class="sortable" sortable="personalInfo.firstName" (sort)="onSort($event)">First name
+          <span class="caret-blank"
+          [ngClass]="{'caret-down':order=='desc' && column=='personalInfo.firstName', 'caret-up':order=='asc' && column=='personalInfo.firstName'}">
+    </span>
+      </th>
+      <th scope="col" class="sortable" sortable="personalInfo.lastName" (sort)="onSort($event)">Last name
+          <span class="caret-blank"
+          [ngClass]="{'caret-down':order=='desc' && column=='personalInfo.lastName', 'caret-up':order=='asc' && column=='personalInfo.lastName'}">
+    </span>
+      </th>
+      <th scope="col" class="sortable" sortable="personalInfo.skype" (sort)="onSort($event)">Skype
+          <span class="caret-blank"
+          [ngClass]="{'caret-down':order=='desc' && column=='personalInfo.skype', 'caret-up':order=='asc' && column=='personalInfo.skype'}">
+    </span>
+      </th>
+      <th scope="col" class="sortable" sortable="personalInfo.email" (sort)="onSort($event)">Email
+          <span class="caret-blank"
+          [ngClass]="{'caret-down':order=='desc' && column=='personalInfo.email', 'caret-up':order=='asc' && column=='personalInfo.email'}">
+    </span>
+      </th>
+      <th scope="col" class="sortable" sortable="personalInfo.phoneNumber" (sort)="onSort($event)">Phone number
+          <span class="caret-blank"
+          [ngClass]="{'caret-down':order=='desc' && column=='personalInfo.phoneNumber', 'caret-up':order=='asc' && column=='personalInfo.phoneNumber'}">
+    </span>
+      </th>
+      <th scope="col" class="sortable" sortable="isActive" (sort)="onSort($event)">Active
+          <span class="caret-blank"
+          [ngClass]="{'caret-down':order=='desc' && column=='isActive', 'caret-up':order=='asc' && column=='isActive'}">
+    </span>
+      </th>
       <th scope="col">Operations</th>
     </tr>
   </thead>
@@ -22,7 +48,6 @@
       <th>{{employee.id}}</th>
       <td>{{employee.personalInfo.firstName}}</td>
       <td>{{employee.personalInfo.lastName}}</td>
-      <!-- <td>{{employee.personalInfo.adress}}</td> -->
       <td>{{employee.personalInfo.skype}}</td>
       <td>{{employee.personalInfo.email}}</td>
       <td>{{employee.personalInfo.phoneNumber}}</td>
@@ -32,19 +57,26 @@
         <button *ngIf="employee.active===false" class="btn btn-primary ml-2"
           (click)="dismissRecoveryEmployee(1, employee.id)">Recovery</button>
       </td>
-      <!-- <td>{{employee.personalInfo.description}}</td> -->
       <td>
         <button class="btn btn-primary ml-2" data-toggle="modal" data-target="#infoModal"
           (click)="setEditEmployee(employee)" (click)="setCurrentDepartment(employee.id)"
           (click)="setCurrentPosition(employee.id)">Info</button>
       </td>
     </tr>
-
   </tbody>
 </table>
 
-
-
+<div class="d-flex justify-content-between ">
+    <ngb-pagination
+    (pageChange)="onPageChange($event)" [collectionSize]="length" [(page)]="page" [pageSize]="size"
+    [maxSize]="5" [rotate]="true" [boundaryLinks]="true">
+    </ngb-pagination>
+    <select (click)="onSizeChange()" class="custom-select" style="width: auto" [(ngModel)]="size">
+        <option [ngValue]="5">5 items per page</option>
+        <option [ngValue]="15">15 items per page</option>
+        <option [ngValue]="30">30 items per page</option>
+      </select>
+  </div>
 
 <!-- add modal -->
 <div class="modal fade bd-example-modal-lg" id="addModal" tabindex="-1" role="dialog"
@@ -53,7 +85,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="exampleModalCenterTitle">Add new Employee</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <button type="button" class="close" data-dismiss="modal" (click)="f.resetForm()" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
@@ -62,29 +94,31 @@
           <div class="row">
             <div class="col">
               <div class="form-group">
-                <input type="text" class="form-control" placeholder="First name" name="firstName"
-                  [(ngModel)]="form.firstName" #firstName="ngModel">
+                <input type="text" required class="form-control" placeholder="First name" name="firstName"
+                  [(ngModel)]="form.firstName" #firstName="ngModel"
+                  [ngClass]="{'is-valid':firstName.valid && firstName.touched,'is-invalid':firstName.invalid && firstName.touched}" >
               </div>
             </div>
             <div class="col">
               <div class="form-group">
-                <input type="text" class="form-control" placeholder="Last name" name="lastName"
-                  [(ngModel)]="form.lastName" #lastName="ngModel">
+                <input type="text" required class="form-control is-valid" placeholder="Last name" name="lastName"
+                  [(ngModel)]="form.lastName" #lastName="ngModel"
+                  [ngClass]="{'is-valid':lastName.valid && lastName.touched,'is-invalid':lastName.invalid && lastName.touched}">
               </div>
             </div>
           </div>
           <div class="row">
-
             <div class="col">
               <div class="form-group">
-                <input type="text" class="form-control" placeholder="Email" name="email" [(ngModel)]="form.email"
-                  #email="ngModel">
+                <input type="text" required class="form-control" placeholder="Email" name="email" [(ngModel)]="form.email"
+                  #email="ngModel" [ngClass]="{'is-valid':email.valid && email.touched,'is-invalid':email.invalid && email.touched}">
               </div>
             </div>
             <div class="col">
               <div class="form-group">
-                <input type="text" class="form-control" placeholder="Phone number" name="phoneNumber"
-                  [(ngModel)]="form.phoneNumber" #phoneNumber="ngModel">
+                <input type="text" required class="form-control" placeholder="Phone number" name="phoneNumber"
+                  [(ngModel)]="form.phoneNumber" #phoneNumber="ngModel" 
+                  [ngClass]="{'is-valid':phoneNumber.valid && phoneNumber.touched,'is-invalid':phoneNumber.invalid && phoneNumber.touched}">
               </div>
             </div>
             <div class="col">
@@ -95,11 +129,11 @@
             </div>
           </div>
           <div class="form-group">
-            <input type="text" class="form-control" placeholder="Adress" name="adress" [(ngModel)]="form.adress"
-              #adress="ngModel">
+            <input type="text" required class="form-control " placeholder="Adress" name="adress" [(ngModel)]="form.adress"
+              #adress="ngModel" [ngClass]="{'is-valid':adress.valid && adress.touched,'is-invalid':adress.invalid && adress.touched}">
           </div>
           <div class="form-group">
-            <textarea type="text" class="form-control" placeholder="Description" name="description"
+            <textarea type="text" class="form-control " placeholder="Description" name="description"
               [(ngModel)]="form.description" #description="ngModel">
               </textarea>
           </div>
@@ -107,7 +141,8 @@
             <div class="col">
               <div class="form-group">
                 <label for="position_id">Position</label>
-                <select class="custom-select" name="position_id" [(ngModel)]="form.position_id" #position_id="ngModel">
+                <select required class="custom-select " name="position_id" [(ngModel)]="form.position_id" #position_id="ngModel"
+                    [ngClass]="{'is-valid':position_id.valid && position_id.touched,'is-invalid':position_id.invalid && position_id.touched}">
                   <option *ngFor="let position of positionList" [ngValue]="position.id">{{position.name}}</option>
                 </select>
               </div>
@@ -115,8 +150,8 @@
             <div class="col">
               <div class="form-group">
                 <label for="department_id">Department</label>
-                <select class="custom-select" name="department_id" [(ngModel)]="form.department_id"
-                  #department_id="ngModel">
+                <select required class="custom-select" name="department_id" [(ngModel)]="form.department_id"
+                  #department_id="ngModel" [ngClass]="{'is-valid':department_id.valid && department_id.touched,'is-invalid':department_id.invalid && department_id.touched}">
                   <option *ngFor="let department of departmentList" [ngValue]="department.id">{{department.name}}
                   </option>
                 </select>
@@ -126,7 +161,7 @@
         </form>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="f.resetForm()">Close</button>
         <button type="button" class="btn btn-primary" [disabled]="f.form.invalid" data-dismiss="modal"
           (click)="add(f)">Save</button>
       </div>
@@ -158,15 +193,17 @@
             <div class="col">
               <div class="form-group">
                 <label>First name</label>
-                <input type="text" class="form-control" placeholder="First name" name="firstName"
-                  [(ngModel)]="personalInfo.firstName" #firstName="ngModel">
+                <input type="text"  class="form-control" placeholder="First name" name="firstName2"
+                  [(ngModel)]="personalInfo.firstName" #firstName2="ngModel"
+                  required [ngClass]="{'is-valid':firstName2.valid ,'is-invalid':firstName2.invalid }">
               </div>
             </div>
             <div class="col">
               <div class="form-group">
                 <label>Last name</label>
-                <input type="text" class="form-control" placeholder="Last name" name="lastName"
-                  [(ngModel)]="personalInfo.lastName" #lastName="ngModel">
+                <input type="text" class="form-control" placeholder="Last name" name="lastName2"
+                  [(ngModel)]="personalInfo.lastName" #lastName2="ngModel"
+                  required [ngClass]="{'is-valid':lastName2.valid ,'is-invalid':lastName2.invalid }">
               </div>
             </div>
           </div>
@@ -174,34 +211,37 @@
             <div class="col">
               <div class="form-group">
                 <label>Email</label>
-                <input type="text" class="form-control" placeholder="Email" name="email"
-                  [(ngModel)]="personalInfo.email" #email="ngModel">
+                <input type="text" class="form-control" placeholder="Email" name="email2"
+                  [(ngModel)]="personalInfo.email" #email2="ngModel"
+                  required [ngClass]="{'is-valid':email2.valid ,'is-invalid':email2.invalid }">
               </div>
             </div>
             <div class="col">
               <div class="form-group">
                 <label>Phone number</label>
-                <input type="text" class="form-control" placeholder="Phone number" name="phoneNumber"
-                  [(ngModel)]="personalInfo.phoneNumber" #phoneNumber="ngModel">
+                <input type="text" class="form-control" placeholder="Phone number" name="phoneNumber2"
+                  [(ngModel)]="personalInfo.phoneNumber" #phoneNumber2="ngModel"
+                  required [ngClass]="{'is-valid':phoneNumber2.valid ,'is-invalid':phoneNumber2.invalid }">
               </div>
             </div>
             <div class="col">
               <div class="form-group">
                 <label>Skype</label>
-                <input type="text" class="form-control" placeholder="Skype" name="skype"
-                  [(ngModel)]="personalInfo.skype" #skype="ngModel">
+                <input type="text" class="form-control" placeholder="Skype" name="skype2"
+                  [(ngModel)]="personalInfo.skype" #skype2="ngModel">
               </div>
             </div>
           </div>
           <div class="form-group">
             <label>Adress</label>
-            <input required type="text" class="form-control" placeholder="Adress" name="adress"
-              [(ngModel)]="personalInfo.adress" #adress="ngModel">
+            <input required type="text" class="form-control" placeholder="Adress" name="adress2"
+              [(ngModel)]="personalInfo.adress" #adress2="ngModel"
+              required [ngClass]="{'is-valid':adress2.valid ,'is-invalid':adress2.invalid }">
           </div>
           <div class="form-group">
             <label>Description</label>
-            <textarea type="text" class="form-control" placeholder="Description" name="description"
-              [(ngModel)]="personalInfo.description" #description="ngModel">
+            <textarea type="text" class="form-control" placeholder="Description" name="description2"
+              [(ngModel)]="personalInfo.description" #description2="ngModel">
               </textarea>
           </div>
         </form>
@@ -268,8 +308,8 @@
             <div class="col">
               <div class="form-group">
                 <label for="position_id">New position</label>
-                <select class="custom-select" name="position_id" [(ngModel)]="formchange.position_id"
-                  #position_id="ngModel">
+                <select class="custom-select" name="position_id" [(ngModel)]="formchange.position_id2"
+                  #position_id2="ngModel">
                   <option *ngFor="let position of positionList" [ngValue]="position.id">{{position.name}}</option>
                 </select>
               </div>
@@ -278,7 +318,7 @@
         </form>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button [disabled]="formchange.currentPositionId==formchange.position_id" type="button"
+          <button [disabled]="formchange.currentPositionId==formchange.position_id2" type="button"
             class="btn btn-primary" [disabled]="fchangeposition.form.invalid" data-dismiss="modal"
             (click)="changePosition()">Change</button>
         </div>
@@ -312,8 +352,8 @@
             <div class="col">
               <div class="form-group">
                 <label for="department_id">New department</label>
-                <select class="custom-select" name="department_id" [(ngModel)]="formchange.department_id"
-                  #department_id="ngModel">
+                <select class="custom-select" name="department_id" [(ngModel)]="formchange.department_id2"
+                  #department_id2="ngModel">
                   <option *ngFor="let department of departmentList" [ngValue]="department.id">{{department.name}}
                   </option>
                 </select>
@@ -323,7 +363,7 @@
         </form>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button [disabled]="formchange.currentDepartmentId==formchange.department_id" type="button"
+          <button [disabled]="formchange.currentDepartmentId==formchange.department_id2" type="button"
             class="btn btn-primary" [disabled]="fchangedepartment.form.invalid" data-dismiss="modal"
             (click)="changeDepartment()">Change</button>
         </div>
