--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,26 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+.sortable{
+    cursor: pointer;
+}
+
+.sortable:hover {
+	background: rgb(226, 226, 226);
+}
+
+.caret-blank {
+	display: inline-block;
+	width: 0;
+	height: 0;
+	border-left: 4px solid transparent;
+	border-right: 4px solid transparent;
+}
+
+.caret-up {
+	border-bottom: 8px solid #333;
+}
+
+.caret-down {
+	border-top: 8px solid #333;
+}
