--- a/src/app/department-employee-list/department-employee-list.component.html
+++ b/src/app/department-employee-list/department-employee-list.component.html
@@ -1,29 +1,56 @@
 <table class="table table-striped">
     <thead>
       <tr>
-        <th scope="col">Id</th>
-        <th scope="col">Employee</th>  
-        <th scope="col">Position</th> 
-        <th scope="col">Start date for position</th>
-        <th scope="col">End date for position</th>
-        <th scope="col">Department</th> 
-        <th scope="col">Start date in department</th>
-        <th scope="col">End date in department</th>
-        <th scope="col">Current department</th> 
+        <th scope="col" class="sortable" sortable="id" (sort)="onSort($event)">Id
+            <span class="caret-blank"
+            [ngClass]="{'caret-down':order=='desc' && column=='id', 'caret-up':order=='asc' && column=='id'}">
+      </span>
+        </th>
+        <th scope="col" class="sortable" sortable="employee" (sort)="onSort($event)">Employee
+            <span class="caret-blank"
+            [ngClass]="{'caret-down':order=='desc' && column=='employee', 'caret-up':order=='asc' && column=='employee'}">
+      </span>
+        </th>         
+        <th scope="col" class="sortable" sortable="department" (sort)="onSort($event)">Department
+            <span class="caret-blank"
+            [ngClass]="{'caret-down':order=='desc' && column=='department', 'caret-up':order=='asc' && column=='department'}">
+      </span>
+        </th> 
+        <th scope="col" class="sortable" sortable="startDateInDepartment" (sort)="onSort($event)">Start date in department
+        <span class="caret-blank"
+          [ngClass]="{'caret-down':order=='desc' && column=='startDateInDepartment', 'caret-up':order=='asc' && column=='startDateInDepartment'}">
+    </span></th>
+        <th scope="col" class="sortable" sortable="endDateInDepartment" (sort)="onSort($event)">End date in department
+        <span class="caret-blank"
+          [ngClass]="{'caret-down':order=='desc' && column=='endDateInDepartment', 'caret-up':order=='asc' && column=='endDateInDepartment'}">
+    </span></th>
+        <th scope="col" class="sortable" sortable="isCurrentDepartment" (sort)="onSort($event)">Current department
+            <span class="caret-blank"
+            [ngClass]="{'caret-down':order=='desc' && column=='isCurrentDepartment', 'caret-up':order=='asc' && column=='isCurrentDepartment'}">
+      </span>
+        </th> 
       </tr>
     </thead>
     <tbody>
       <tr *ngFor="let dep_emp of list">
         <th>{{dep_emp.id}}</th>
         <td>{{dep_emp.employee.personalInfo.firstName}} {{dep_emp.employee.personalInfo.lastName}}</td>
-        <td>{{dep_emp.positionEmployee.position.name}}</td>
-        <td>{{dep_emp.positionEmployee.startDateForPosition}}</td>
-        <td>{{dep_emp.positionEmployee.endDateForPosition}}</td>
         <td>{{dep_emp.department.name}}</td>
         <td>{{dep_emp.startDateInDepartment}}</td>
         <td>{{dep_emp.endDateInDepartment}}</td>
         <td>{{dep_emp.currentDepartment}}</td>
-      </tr>
-  
+      </tr>  
     </tbody>
   </table>
+
+  <div class="d-flex justify-content-between ">
+      <ngb-pagination
+      (pageChange)="onPageChange($event)" [collectionSize]="length" [(page)]="page" [pageSize]="size"
+      [maxSize]="5" [rotate]="true" [boundaryLinks]="true">
+      </ngb-pagination>
+      <select (click)="onSizeChange()" class="custom-select" style="width: auto" [(ngModel)]="size">
+          <option [ngValue]="5">5 items per page</option>
+          <option [ngValue]="15">15 items per page</option>
+          <option [ngValue]="30">30 items per page</option>
+        </select>
+    </div>
